# nn2000_to_etrs89

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
data/: README.md
examples/: points.txt
src/: Geoid.hpp.in  ReadOnlyStreamBuffer.hpp  main.cpp
